lazylibrarian/service.yml
apiVersion: v1
kind: Service
metadata:
  name: lazylibrarian
  labels:
    app: lazylibrarian
spec:
  ports:
  - name: http
    port: 5299
  selector:
    app: lazylibrarian
